# embedded_interface

./: CMakeLists.txt  package.xml  readme.md
config/: omni3_config.yaml  test_observer.yaml
include/: callbacks_container.hpp  data_convert.hpp  motor.hpp
include/common/: callbacks_container.hpp  common_calc.hpp  common_macro_dependencies.hpp  common_math.hpp  concepts.hpp  data_convert.hpp  framerate.hpp  function_def.hpp  macro_def.h  param_interface.hpp  type_def.hpp
include/common/debug/: log.hpp
include/common/protocol/: crc.hpp  serialized_protocol.hpp
include/connector/: connector.hpp  connector_def.hpp  connector_node.hpp  data_convert.hpp  msgpack.hpp  pack_manager.hpp
include/connector/connector_specified/: can_connector.hpp  tty_connector.hpp
include/connector/funtional/: lantency_test.hpp
include/controller/: controller.hpp  controller_def.hpp  lqr.hpp  pid.hpp
include/depend_on_ros12/attached_node/: attached_node.hpp  controller_node.hpp  watch_node.hpp
include/depend_on_ros12/controller_node_attached/: controller_node.hpp
include/depend_on_ros12/motor_node/: motor_node.hpp
include/emi_functional/: auto_restarter.hpp
include/motor/: motor.hpp  motor_def.hpp  motor_dji3508.hpp  motor_dji6020.hpp  motor_node.hpp
include/motor_basic/: motor_basic_node.hpp
include/motor_node/: motor_basic_node.hpp  motor_node.hpp
include/msg_layer/: dynamic_param.hpp  msg.hpp  msg_convert.hpp  msg_layer.hpp
include/observer/: diff_observer.hpp  function_def.hpp  kf_observer.hpp  model.hpp  observer.hpp
msg/: MotorFdb.msg
src/: auto_restarter.cpp  can_test.cpp
src/apps/: omni3.cpp  omni3.py
src/motor_node/: motor_node.hpp
test/: lib_basic_test.cpp  mpc.hpp  test_3508.cpp  test_any_pub.cpp  test_auto_restarter.cpp  test_c20.cpp  test_connector_can.cpp  test_inter_pubsub.cpp  test_loopback_lantency.cpp  test_motor.cpp  test_motor_ros2.cpp  test_mpc.cpp  test_observer.cpp  test_param_dynamic_config.cpp  test_param_parser.cpp  test_param_vector.cpp  test_tty.cpp
